# llama-stack-provider-trustyai-garak

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BENCHMARK_METADATA_REFERENCE.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  CONTRIBUTING.md  Containerfile  Makefile  README.md  constraints.txt  pyproject.toml  requirements-aarch64.txt  requirements-build.txt  requirements-inline-extra.txt  requirements-x86_64.txt  requirements.txt  run-remote-safety.yaml  run-remote.yaml  run-with-safety.yaml  run.yaml
.agentready/: assessment-20260212-110120.json  assessment-latest.json  report-20260212-110120.html  report-20260212-110120.md  report-latest.html  report-latest.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-and-publish.yaml  container-build.yml  coverage.yml  integration-test.yml  lint.yml  run-tests.yml  security.yml  validate-deps.yml
configs/: partial-remote.yaml  total-inline.yaml
demos/: 00-getting_started_with_garak.ipynb  01-getting_started_with_garak.ipynb  01-scan_with_shields.ipynb  02-concurrency_limit_test.ipynb  02-scan_with_shields.ipynb  03-remote-garak.ipynb  03-remote_garak.ipynb  concurrency_limit_test.ipynb  guide.ipynb
demos/1-openshift-ai/: README.md  openshift-demo.ipynb
demos/1-openshift-ai/deployment/: kubeflow-garak-config.yaml  llama-stack-distribution.yaml
demos/2-partial-remote/: README.md  demo-shield.ipynb  partial-remote-shield.yaml  partial-remote.yaml
demos/3-local-inline/: README.md  basic_usage.ipynb  inline-shield-sample.yaml  inline.yaml
lsd_remote/: postgres-complete-deployment.yaml
lsd_remote/kfp-setup/: kfp-networkpolicy.yaml  kfp.yaml
lsd_remote/llama_stack_distro-setup/: lsd-config.yaml  lsd-garak.yaml  lsd-role.yaml  lsd-secrets.yaml
providers.d/inline/eval/: trustyai_garak.yaml
providers.d/remote/eval/: trustyai_garak.yaml
src/llama_stack_provider_trustyai_garak/: __init__.py  avid_report.py  base_eval.py  compat.py  config.py  constants.py  errors.py  garak.py  garak_command_config.py  garak_eval.py  garak_remote_eval.py  intents.py  progress_parser.py  provider.py  result_utils.py  sdg.py  shield_scan.py  utils.py  version_utils.py
src/llama_stack_provider_trustyai_garak/core/: __init__.py  command_builder.py  config_resolution.py  garak_runner.py  pipeline_steps.py
src/llama_stack_provider_trustyai_garak/evalhub/: __init__.py  __main__.py  garak_adapter.py  kfp_adapter.py  kfp_pipeline.py  s3_utils.py
src/llama_stack_provider_trustyai_garak/inline/: __init__.py  garak_eval.py  provider.py
src/llama_stack_provider_trustyai_garak/kfp_utils/: components.py  pipeline.py
src/llama_stack_provider_trustyai_garak/remote/: __init__.py  garak_remote_eval.py  provider.py
src/llama_stack_provider_trustyai_garak/remote/kfp_utils/: components.py  pipeline.py  utils.py
src/llama_stack_provider_trustyai_garak/resources/: art_report.jinja2  vega_chart_attacks_by_scenario.json  vega_chart_behaviour_by_intent.json  vega_chart_behaviour_by_probe.json  vega_chart_spo_probe_details.json  vega_chart_strategy_heatmap.json  vega_chart_strategy_vs_scenario.json  vega_chart_tap_probe_details.json
tests/: conftest.py  test_Containerfile.sh  test_config.py  test_evalhub_adapter.py  test_inline_provider.py  test_intents.py  test_intents_with_shields.py  test_multistage.sh  test_pipeline_steps.py  test_remote_provider.py  test_sdg_max_concurrency.py  test_sdg_params.py  test_shield_scan.py  test_utils.py  test_version.py
tests/_resources/: garak_earlystop_run.jsonl
tests/fixtures/: README.md  sample_garak_config.yaml  sample_report.jsonl
tests/integration/: __init__.py  test_e2e.py
