[project]
name = "llama-stack-provider-trustyai-garak"
version = "0.3.0"
description = "Out-Of-Tree Llama Stack provider for Garak Red-teaming"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    {name = "Sai Chandra Pandraju", email = "saichandrapandraju@gmail.com"},
    {name = "TrustyAI Team"}
]
keywords = ["llama-stack", "garak", "red-teaming", "security", "ai-safety"]
dependencies = [
    "llama-stack-client>=0.5.0,<0.6.0",
    "llama-stack-api>=0.5.0,<0.6.0",
    # Remote execution dependencies
    "kfp>=2.14.6",
    "kfp-kubernetes>=2.14.6",
    "kfp-server-api>=2.14.6",
    "boto3>=1.35.88",
    # eval-hub integration
    "eval-hub-sdk[adapter]>=0.1.2",
    "pandas>=2.3.3",
    "Jinja2>=3.1.6",
    # "pytest>=9.0.2", # included in 'dev' extra
]

[project.urls]
homepage = "https://github.com/trustyai-explainability/llama-stack-provider-trustyai-garak"
repository = "https://github.com/trustyai-explainability/llama-stack-provider-trustyai-garak"

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"llama_stack_provider_trustyai_garak" = ["resources/*"]

[project.optional-dependencies]
inline = [
    "pyasn1==0.6.2", # trivy high vul fix
    "protobuf==6.33.5", # trivy high vul fix
    "nest_asyncio>=1.6.0",
    "garak>=0.14.0"
]
# For intents, install:
#   pip install -r requirements-inline-extra.txt
dev = ["pytest", "pytest-cov",  "pytest-asyncio", "black", "isort"]
server = ["llama-stack>=0.5.0,<0.6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]
addopts = "-v"
